[package]
name = "lepton-runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
eyre = "0.6.8"
fontdue = "0.7.3"
log = "0.4.20"
palette = "0.7.3"
softbuffer = "0.3.1"
unicode-segmentation = "1.10.1"
winit = "0.29.1-beta"
